--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-pdf": "^1.6.1"
   },
   "devDependencies": {
+    "node-sass-chokidar": "0.0.3",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -17,10 +18,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
