--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node-sass-chokidar": "0.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-pdf": "^1.6.1"
+    "react-pdf": "^1.6.1",
+    "react-router-dom": "4.1.2"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.3",
